[gd_scene load_steps=6 format=3 uid="uid://plateau_sample_terrain"]

[ext_resource type="Script" path="res://samples/terrain_sample.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="TerrainSample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 100, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TerrainPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 220.0

[node name="Title" type="Label" parent="UI/TerrainPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 25.0
text = "Terrain"
horizontal_alignment = 1

[node name="LoadTerrainButton" type="Button" parent="UI/TerrainPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 55.0
text = "Load Terrain GML..."

[node name="SizeLabel" type="Label" parent="UI/TerrainPanel"]
offset_left = 10.0
offset_top = 65.0
offset_right = 90.0
offset_bottom = 85.0
text = "Heightmap:"

[node name="WidthSpin" type="SpinBox" parent="UI/TerrainPanel"]
offset_left = 90.0
offset_top = 63.0
offset_right = 155.0
offset_bottom = 87.0
min_value = 64.0
max_value = 1024.0
value = 257.0

[node name="XLabel" type="Label" parent="UI/TerrainPanel"]
offset_left = 158.0
offset_top = 65.0
offset_right = 175.0
offset_bottom = 85.0
text = " x "

[node name="HeightSpin" type="SpinBox" parent="UI/TerrainPanel"]
offset_left = 175.0
offset_top = 63.0
offset_right = 230.0
offset_bottom = 87.0
min_value = 64.0
max_value = 1024.0
value = 257.0

[node name="GenerateHeightmapButton" type="Button" parent="UI/TerrainPanel"]
offset_left = 10.0
offset_top = 95.0
offset_right = 230.0
offset_bottom = 120.0
text = "Generate Heightmap"

[node name="SaveHeightmapButton" type="Button" parent="UI/TerrainPanel"]
offset_left = 10.0
offset_top = 125.0
offset_right = 230.0
offset_bottom = 150.0
text = "Save Heightmap PNG..."

[node name="BuildingPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 230.0
offset_right = 250.0
offset_bottom = 390.0

[node name="Title" type="Label" parent="UI/BuildingPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 25.0
text = "Buildings"
horizontal_alignment = 1

[node name="LoadBuildingButton" type="Button" parent="UI/BuildingPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 55.0
text = "Load Building GML..."

[node name="OffsetLabel" type="Label" parent="UI/BuildingPanel"]
offset_left = 10.0
offset_top = 65.0
offset_right = 110.0
offset_bottom = 85.0
text = "Height Offset:"

[node name="OffsetSpin" type="SpinBox" parent="UI/BuildingPanel"]
offset_left = 115.0
offset_top = 63.0
offset_right = 230.0
offset_bottom = 87.0
min_value = -10.0
max_value = 10.0
step = 0.1
value = -0.15

[node name="AlignButton" type="Button" parent="UI/BuildingPanel"]
offset_left = 10.0
offset_top = 95.0
offset_right = 230.0
offset_bottom = 120.0
text = "Align to Terrain"

[node name="HeightmapPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 400.0
offset_right = 180.0
offset_bottom = 580.0

[node name="Title" type="Label" parent="UI/HeightmapPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 160.0
offset_bottom = 25.0
text = "Heightmap Preview"
horizontal_alignment = 1

[node name="HeightmapPreview" type="TextureRect" parent="UI/HeightmapPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 170.0
expand_mode = 1
stretch_mode = 5

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 25.0
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 400.0
offset_bottom = -10.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
fit_content = true
scroll_following = true
